--- a/auftrag 5/index.html
+++ b/auftrag 5/index.html
@@ -58,7 +58,7 @@
                 </form>
             </div>
             <div class="item-pic item">
-                <img id="img_db" src="/pics/kasm.png" alt="kasm">
+                <img id="img_db" src="/GitHub/web_usz/auftrag\ 5/pics/kasm.png" alt="kassm">
             </div>
             <div class="item-footer item">
                 <p id="copyright">&#169; Josias Theil</p>
