--- a/auftrag 5/index.html
+++ b/auftrag 5/index.html
@@ -15,7 +15,6 @@
 </head>
 <body>
     <div id="rahmen">
-        <p>platzhalter</p>
         <div class="grid-container">
             <div class="hamburger_menu">
                 <input id="menu__toggle" type="checkbox" />
@@ -29,10 +28,12 @@
                         <li><a class="menu__item" href="#">Price</a></li>
                         <li><a class="menu__item" href="#">Download</a></li>
                         <li><a class="menu__item" href="#">Featureset</a></li>
-                        <form action="https://kasm.theil.es/#/login" target="_blank">
-                            <button class="button">sign in</button>
-                            <input type="hidden" name="bookmark" value="lyrics" />
-                        </form>
+                        <li>
+                            <form action="https://kasm.theil.es/#/login" target="_blank" id="sign_in">
+                                <button class="button">sign in</button>
+                                <input type="hidden" name="bookmark" value="lyrics" />
+                            </form>
+                        </li> 
                 </ul>
             </div>
             <div class="item-logo item">
@@ -58,13 +59,12 @@
                 </form>
             </div>
             <div class="item-pic item">
-                <img id="img_db" src="/GitHub/web_usz/auftrag\ 5/pics/kasm.png" alt="kassm">
+                <img id="img_db" src="pics/kasm.png" alt="kassm">
             </div>
             <div class="item-footer item">
                 <p id="copyright">&#169; Josias Theil</p>
             </div>
         </div>
-        <p>platzhalter</p>
     </div>
 </body>
 </html>
