--- a/auftrag 5/index.html
+++ b/auftrag 5/index.html
@@ -16,28 +16,28 @@
 <body>
     <div id="rahmen">
         <div class="grid-container">
-            <div class="hamburger_menu">
-                <input id="menu__toggle" type="checkbox" />
-                <label class="menu__btn" for="menu__toggle">
-                  <span></span>
-                </label>
-            
-                <ul class="menu__box">
-                  <li><a class="menu__item" href="#">Home</a></li>
-                        <li><a class="menu__item" href="#">About</a></li>
-                        <li><a class="menu__item" href="#">Price</a></li>
-                        <li><a class="menu__item" href="#">Download</a></li>
-                        <li><a class="menu__item" href="#">Featureset</a></li>
-                        <li>
-                            <form action="https://kasm.theil.es/#/login" target="_blank" id="sign_in">
-                                <button class="button">sign in</button>
-                                <input type="hidden" name="bookmark" value="lyrics" />
-                            </form>
-                        </li> 
-                </ul>
-            </div>
             <div class="item-logo item">
                 <a href="https://kasm.theil.es" id="title-text" target="_blank">Kasm</a>
+                <div class="hamburger_menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                      <span></span>
+                    </label>
+                
+                    <ul class="menu__box">
+                      <li><a class="menu__item" href="#">Home</a></li>
+                            <li><a class="menu__item" href="#">About</a></li>
+                            <li><a class="menu__item" href="#">Price</a></li>
+                            <li><a class="menu__item" href="#">Download</a></li>
+                            <li><a class="menu__item" href="#">Featureset</a></li>
+                            <li>
+                                <form action="https://kasm.theil.es/#/login" target="_blank" id="sign_in">
+                                    <button class="button">sign in</button>
+                                    <input type="hidden" name="bookmark" value="lyrics" />
+                                </form>
+                            </li> 
+                    </ul>
+                </div>
             </div>
             <div class="item-menu item">
                 <a href="#" class="menu-item">Home</a>
@@ -59,7 +59,7 @@
                 </form>
             </div>
             <div class="item-pic item">
-                <img id="img_db" src="pics/kasm.png" alt="kassm">
+                <img id="img_db" src="./pics/kasm.png" alt="kassm">
             </div>
             <div class="item-footer item">
                 <p id="copyright">&#169; Josias Theil</p>
