--- a/Auftrag 7/index.html
+++ b/Auftrag 7/index.html
@@ -10,8 +10,19 @@
 </head>
 
 <body>
-    <div class="item-menu item">
-
+    <div class="grid-container">
+        <div class="item-logo item">item logo
+        </div>
+        <div class="item-menu item">item-menu
+        </div>
+        <div class="item-header item">item-header
+        </div>
+        <div class="item-profile item">item-profile
+        </div>
+        <div class="item-password item">item-passowrd
+        </div>
+        <div class="item-footer item">item-footer
+        </div>
     </div>
 </body>
 
