--- a/Auftrag 7/index.html
+++ b/Auftrag 7/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="item-add-images item center">
                 <p class="title">Add Images*</p>
-                <input type="file" >
+                <button class="button">Upload Image</button>
             </div>
         </div>
         <div class="item-footer item">
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="item-upload item">
-            <button class="button">Create</button>
+            <button class="button" id="create">Create</button>
         </div>
     </div>
 </body>
