--- a/Auftrag 7/index.html
+++ b/Auftrag 7/index.html
@@ -82,10 +82,10 @@
                 <a href="#" class="footer-hover">Contact</a> 
             </div>
             <div class="item-footer-right item">
-                <a class="socialmedia" href="https://facebook.com"><img class="socialmedia" src="./pics/facebook.png" alt="facebook"></a>
-                <a class="socialmedia" href="https://x.com"><img class="socialmedia" src="./pics/twitter.png" alt="Twitter"></a>
-                <a class="socialmedia" href="https://linkedin.com"><img class="socialmedia" src="./pics/linkedin.png" alt="Linkedin"></a>
-                <a class="socialmedia" href="https://instagram.com"><img class="socialmedia" src="./pics/instagram.png" alt="Instagram"></a>
+                <a class="socialmedia" href="https://facebook.com" target="_blank"><img class="socialmedia" src="./pics/facebook.png" alt="facebook"></a>
+                <a class="socialmedia" href="https://x.com" target="_blank"><img class="socialmedia" src="./pics/twitter.png" alt="Twitter"></a>
+                <a class="socialmedia" href="https://linkedin.com" target="_blank"><img class="socialmedia" src="./pics/linkedin.png" alt="Linkedin"></a>
+                <a class="socialmedia" href="https://instagram.com" target="_blank"><img class="socialmedia" src="./pics/instagram.png" alt="Instagram"></a>
             </div>
         </div>
         <div class="item-upload item">
