--- a/Auftrag 7/index.html
+++ b/Auftrag 7/index.html
@@ -26,7 +26,7 @@
                     <option value="italy">Italy</option>
                 </select>
             </form>
-            <form action="https://calendar.google.com" target="_blank">
+            <form id="sign-in" action="https://calendar.google.com" target="_blank">
                 <button class="button">sign in</button>
                 <input type="hidden" name="bookmark" value="lyrics" />
             </form>
